src/test/ui/regions/regions-outlives-projection-container-hrtb.nll.stderr
error: compilation successful
  --> $DIR/regions-outlives-projection-container-hrtb.rs:68:1
   |
LL | / fn main() {
LL | | }
   | |_^

error: aborting due to previous error

